# site

./: about.html  about.markdown  archive.html  contact.html  deploy.sh  index.html  site.cabal  site.hs  stack.yaml
css/: default.css  default.css.bak  normalize.css
posts/first-post/: 2017-10-07-first-post.html  2017-10-07-first-post.markdown
posts/genart-stack/: 2018-08-12-genart-stack.html  2018-08-12-genart-stack.markdown  README.md  genart-stack.cabal
posts/genart-stack/src/: Main.lhs
templates/: default.html
