name:                genart-stack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/post-name#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable post-name
  hs-source-dirs:      src
  main-is:             Main.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , markdown-unlit
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-contrib
                     , diagrams-cairo
                     , containers
                     , colour
                     , data-default
                     , lens
                     , random-fu
                     , random
                     , rvar
                     , transformers
                     , mtl
  ghc-options: -pgmL markdown-unlit
